// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserState Component Snapshot Actions renders correctly when selecting a new state 1`] = `
<div>
  <div
    class="user-state-container"
    data-testid="user-state-container"
  >
    <div
      aria-describedby="mdc-tooltip-test"
      class="state-select  md-select-wrapper"
      id="user-state-tooltip"
      style="--local-width: 100%;"
    >
      <div
        aria-hidden="true"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          <select
            size="3"
            tabindex="-1"
          >
            <option />
            <option
              value="0"
            >
              Available
            </option>
            <option
              value="1"
            >
              Break
            </option>
            <option
              value="2"
            >
              Meeting
            </option>
          </select>
        </label>
      </div>
      <button
        aria-controls="user-state-tooltip"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="user-state"
        aria-labelledby="user-state-tooltip react-aria-:rt:"
        class="md-select-dropdown-input md-select-selected"
        data-testid="state-select"
        id="user-state-tooltip"
        role="combobox"
        type="button"
      >
        <span
          class="md-select-selected-item-wrapper"
          id="react-aria-:rt:"
          title="Available"
        >
          <div
            class="item-container"
            data-testid="item-container selected available"
          >
            <mdc-icon
              class="state-icon available"
              data-testid="state-icon"
              name="active-presence-small-filled"
              title=""
            />
            <mdc-text
              class="md-text-wrapper state-name available"
              data-testid="state-name"
              tagname="small"
              type="body-large-regular"
            >
              Available
            </mdc-text>
          </div>
        </span>
        <span
          aria-hidden="true"
          class="md-select-icon-wrapper"
        >
          <div
            class="md-icon-wrapper"
          >
            <div
              class="md-icon-not-found"
              data-autoscale="false"
              data-scale="16"
            >
              ⃞
            </div>
          </div>
        </span>
      </button>
    </div>
    <mdc-tooltip
      append-to=""
      class="tooltip"
      color="contrast"
      delay="0, 0"
      disable-aria-expanded=""
      flip=""
      hide-on-blur=""
      hide-on-escape=""
      id="mdc-tooltip-test"
      offset="4"
      placement="bottom"
      role="tooltip"
      style="z-index: 1000;"
      tooltip-type="description"
      trigger="mouseenter focusin"
      triggerid="user-state-tooltip"
      z-index="1000"
    >
      <mdc-text
        class="md-text-wrapper tooltip-text"
        tagname="small"
        type="body-large-regular"
      >
        Availability State
      </mdc-text>
    </mdc-tooltip>
    <span
      class="elapsedTime "
      data-testid="elapsed-time"
    >
      03:00 / 
      05:00
    </span>
    <mdc-icon
      class="select-arrow-icon"
      data-testid="select-arrow-icon"
      name="arrow-down-bold"
      title=""
    />
  </div>
</div>
`;

exports[`UserState Component Snapshot Actions renders correctly when setting agent status 1`] = `
<div>
  <div
    class="user-state-container"
    data-testid="user-state-container"
  >
    <div
      aria-describedby="mdc-tooltip-test"
      class="state-select  md-select-wrapper"
      id="user-state-tooltip"
      style="--local-width: 100%;"
    >
      <div
        aria-hidden="true"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          <select
            size="3"
            tabindex="-1"
          >
            <option />
            <option
              value="0"
            >
              Available
            </option>
            <option
              value="1"
            >
              Break
            </option>
            <option
              value="2"
            >
              Meeting
            </option>
          </select>
        </label>
      </div>
      <button
        aria-controls="user-state-tooltip"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="user-state"
        aria-labelledby="user-state-tooltip react-aria-:r13:"
        class="md-select-dropdown-input md-select-selected"
        data-testid="state-select"
        id="user-state-tooltip"
        role="combobox"
        type="button"
      >
        <span
          class="md-select-selected-item-wrapper"
          id="react-aria-:r13:"
          title="Available"
        >
          <div
            class="item-container"
            data-testid="item-container selected available"
          >
            <mdc-icon
              class="state-icon available"
              data-testid="state-icon"
              name="active-presence-small-filled"
              title=""
            />
            <mdc-text
              class="md-text-wrapper state-name available"
              data-testid="state-name"
              tagname="small"
              type="body-large-regular"
            >
              Available
            </mdc-text>
          </div>
        </span>
        <span
          aria-hidden="true"
          class="md-select-icon-wrapper"
        >
          <div
            class="md-icon-wrapper"
          >
            <div
              class="md-icon-not-found"
              data-autoscale="false"
              data-scale="16"
            >
              ⃞
            </div>
          </div>
        </span>
      </button>
    </div>
    <mdc-tooltip
      append-to=""
      class="tooltip"
      color="contrast"
      delay="0, 0"
      disable-aria-expanded=""
      flip=""
      hide-on-blur=""
      hide-on-escape=""
      id="mdc-tooltip-test"
      offset="4"
      placement="bottom"
      role="tooltip"
      style="z-index: 1000;"
      tooltip-type="description"
      trigger="mouseenter focusin"
      triggerid="user-state-tooltip"
      z-index="1000"
    >
      <mdc-text
        class="md-text-wrapper tooltip-text"
        tagname="small"
        type="body-large-regular"
      >
        Availability State
      </mdc-text>
    </mdc-tooltip>
    <span
      class="elapsedTime elapsedTime-disabled"
      data-testid="elapsed-time"
    >
      03:00 / 
      05:00
    </span>
    <mdc-icon
      class="select-arrow-icon"
      data-testid="select-arrow-icon"
      name="arrow-down-bold"
      title=""
    />
  </div>
</div>
`;

exports[`UserState Component Snapshot Actions renders correctly with negative elapsed time 1`] = `
<div>
  <div
    class="user-state-container"
    data-testid="user-state-container"
  >
    <div
      aria-describedby="mdc-tooltip-test"
      class="state-select  md-select-wrapper"
      id="user-state-tooltip"
      style="--local-width: 100%;"
    >
      <div
        aria-hidden="true"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          <select
            size="3"
            tabindex="-1"
          >
            <option />
            <option
              value="0"
            >
              Available
            </option>
            <option
              value="1"
            >
              Break
            </option>
            <option
              value="2"
            >
              Meeting
            </option>
          </select>
        </label>
      </div>
      <button
        aria-controls="user-state-tooltip"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="user-state"
        aria-labelledby="user-state-tooltip react-aria-:r19:"
        class="md-select-dropdown-input md-select-selected"
        data-testid="state-select"
        id="user-state-tooltip"
        role="combobox"
        type="button"
      >
        <span
          class="md-select-selected-item-wrapper"
          id="react-aria-:r19:"
          title="Available"
        >
          <div
            class="item-container"
            data-testid="item-container selected available"
          >
            <mdc-icon
              class="state-icon available"
              data-testid="state-icon"
              name="active-presence-small-filled"
              title=""
            />
            <mdc-text
              class="md-text-wrapper state-name available"
              data-testid="state-name"
              tagname="small"
              type="body-large-regular"
            >
              Available
            </mdc-text>
          </div>
        </span>
        <span
          aria-hidden="true"
          class="md-select-icon-wrapper"
        >
          <div
            class="md-icon-wrapper"
          >
            <div
              class="md-icon-not-found"
              data-autoscale="false"
              data-scale="16"
            >
              ⃞
            </div>
          </div>
        </span>
      </button>
    </div>
    <mdc-tooltip
      append-to=""
      class="tooltip"
      color="contrast"
      delay="0, 0"
      disable-aria-expanded=""
      flip=""
      hide-on-blur=""
      hide-on-escape=""
      id="mdc-tooltip-test"
      offset="4"
      placement="bottom"
      role="tooltip"
      style="z-index: 1000;"
      tooltip-type="description"
      trigger="mouseenter focusin"
      triggerid="user-state-tooltip"
      z-index="1000"
    >
      <mdc-text
        class="md-text-wrapper tooltip-text"
        tagname="small"
        type="body-large-regular"
      >
        Availability State
      </mdc-text>
    </mdc-tooltip>
    <span
      class="elapsedTime "
      data-testid="elapsed-time"
    >
      05:00
    </span>
    <mdc-icon
      class="select-arrow-icon"
      data-testid="select-arrow-icon"
      name="arrow-down-bold"
      title=""
    />
  </div>
</div>
`;

exports[`UserState Component Snapshot Rendering renders correctly and matches snapshot 1`] = `
<div>
  <div
    class="user-state-container"
    data-testid="user-state-container"
  >
    <div
      aria-describedby="mdc-tooltip-test"
      class="state-select  md-select-wrapper"
      id="user-state-tooltip"
      style="--local-width: 100%;"
    >
      <div
        aria-hidden="true"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          <select
            size="3"
            tabindex="-1"
          >
            <option />
            <option
              value="0"
            >
              Available
            </option>
            <option
              value="1"
            >
              Break
            </option>
            <option
              value="2"
            >
              Meeting
            </option>
          </select>
        </label>
      </div>
      <button
        aria-controls="user-state-tooltip"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="user-state"
        aria-labelledby="user-state-tooltip react-aria-:r5:"
        class="md-select-dropdown-input md-select-selected"
        data-testid="state-select"
        id="user-state-tooltip"
        role="combobox"
        type="button"
      >
        <span
          class="md-select-selected-item-wrapper"
          id="react-aria-:r5:"
          title="Available"
        >
          <div
            class="item-container"
            data-testid="item-container selected available"
          >
            <mdc-icon
              class="state-icon available"
              data-testid="state-icon"
              name="active-presence-small-filled"
              title=""
            />
            <mdc-text
              class="md-text-wrapper state-name available"
              data-testid="state-name"
              tagname="small"
              type="body-large-regular"
            >
              Available
            </mdc-text>
          </div>
        </span>
        <span
          aria-hidden="true"
          class="md-select-icon-wrapper"
        >
          <div
            class="md-icon-wrapper"
          >
            <div
              class="md-icon-not-found"
              data-autoscale="false"
              data-scale="16"
            >
              ⃞
            </div>
          </div>
        </span>
      </button>
    </div>
    <mdc-tooltip
      append-to=""
      class="tooltip"
      color="contrast"
      delay="0, 0"
      disable-aria-expanded=""
      flip=""
      hide-on-blur=""
      hide-on-escape=""
      id="mdc-tooltip-test"
      offset="4"
      placement="bottom"
      role="tooltip"
      style="z-index: 1000;"
      tooltip-type="description"
      trigger="mouseenter focusin"
      triggerid="user-state-tooltip"
      z-index="1000"
    >
      <mdc-text
        class="md-text-wrapper tooltip-text"
        tagname="small"
        type="body-large-regular"
      >
        Availability State
      </mdc-text>
    </mdc-tooltip>
    <span
      class="elapsedTime "
      data-testid="elapsed-time"
    >
      03:00 / 
      05:00
    </span>
    <mdc-icon
      class="select-arrow-icon"
      data-testid="select-arrow-icon"
      name="arrow-down-bold"
      title=""
    />
  </div>
</div>
`;

exports[`UserState Component Snapshot Rendering renders correctly with RONA state 1`] = `
<div>
  <div
    class="user-state-container"
    data-testid="user-state-container"
  >
    <div
      aria-describedby="mdc-tooltip-test"
      class="state-select rona md-select-wrapper"
      id="user-state-tooltip"
      style="--local-width: 100%;"
    >
      <div
        aria-hidden="true"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          <select
            size="4"
            tabindex="-1"
          >
            <option />
            <option
              value="0"
            >
              Available
            </option>
            <option
              value="1"
            >
              Break
            </option>
            <option
              value="2"
            >
              Meeting
            </option>
            <option
              value="hide-3"
            >
              RONA
            </option>
          </select>
        </label>
      </div>
      <button
        aria-controls="user-state-tooltip"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="user-state"
        aria-labelledby="user-state-tooltip react-aria-:rh:"
        class="md-select-dropdown-input md-select-selected"
        data-testid="state-select"
        id="user-state-tooltip"
        role="combobox"
        type="button"
      >
        <span
          class="md-select-selected-item-wrapper"
          id="react-aria-:rh:"
          title="RONA"
        >
          <div
            class="item-container"
            data-testid="item-container "
          >
            <mdc-icon
              class="state-icon rona"
              data-testid="state-icon"
              name="dnd-presence-filled"
              title=""
            />
            <mdc-text
              class="md-text-wrapper state-name rona"
              data-testid="state-name"
              tagname="small"
              type="body-large-regular"
            >
              RONA
            </mdc-text>
          </div>
        </span>
        <span
          aria-hidden="true"
          class="md-select-icon-wrapper"
        >
          <div
            class="md-icon-wrapper"
          >
            <div
              class="md-icon-not-found"
              data-autoscale="false"
              data-scale="16"
            >
              ⃞
            </div>
          </div>
        </span>
      </button>
    </div>
    <mdc-tooltip
      append-to=""
      class="tooltip"
      color="contrast"
      delay="0, 0"
      disable-aria-expanded=""
      flip=""
      hide-on-blur=""
      hide-on-escape=""
      id="mdc-tooltip-test"
      offset="4"
      placement="bottom"
      role="tooltip"
      style="z-index: 1000;"
      tooltip-type="description"
      trigger="mouseenter focusin"
      triggerid="user-state-tooltip"
      z-index="1000"
    >
      <mdc-text
        class="md-text-wrapper tooltip-text"
        tagname="small"
        type="body-large-regular"
      >
        Availability State
      </mdc-text>
    </mdc-tooltip>
    <span
      class="elapsedTime "
      data-testid="elapsed-time"
    >
      03:00 / 
      05:00
    </span>
    <mdc-icon
      class="select-arrow-icon"
      data-testid="select-arrow-icon"
      name="arrow-down-bold"
      title=""
    />
  </div>
</div>
`;

exports[`UserState Component Snapshot Rendering renders correctly with custom state 1`] = `
<div>
  <div
    class="user-state-container"
    data-testid="user-state-container"
  >
    <div
      aria-describedby="mdc-tooltip-test"
      class="state-select custom md-select-wrapper"
      id="user-state-tooltip"
      style="--local-width: 100%;"
    >
      <div
        aria-hidden="true"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          <select
            size="4"
            tabindex="-1"
          >
            <option />
            <option
              value="0"
            >
              Available
            </option>
            <option
              value="1"
            >
              Break
            </option>
            <option
              value="hide-ENGAGED"
            >
              Custom State
            </option>
            <option
              value="2"
            >
              Meeting
            </option>
          </select>
        </label>
      </div>
      <button
        aria-controls="user-state-tooltip"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="user-state"
        aria-labelledby="user-state-tooltip react-aria-:rb:"
        class="md-select-dropdown-input md-select-selected"
        data-testid="state-select"
        id="user-state-tooltip"
        role="combobox"
        type="button"
      >
        <span
          class="md-select-selected-item-wrapper"
          id="react-aria-:rb:"
          title="Custom State"
        >
          <div
            class="item-container"
            data-testid="item-container "
          >
            <mdc-icon
              class="state-icon custom"
              data-testid="state-icon"
              name="busy-presence-light"
              title=""
            />
            <mdc-text
              class="md-text-wrapper state-name custom"
              data-testid="state-name"
              tagname="small"
              type="body-large-regular"
            >
              Custom State
            </mdc-text>
          </div>
        </span>
        <span
          aria-hidden="true"
          class="md-select-icon-wrapper"
        >
          <div
            class="md-icon-wrapper"
          >
            <div
              class="md-icon-not-found"
              data-autoscale="false"
              data-scale="16"
            >
              ⃞
            </div>
          </div>
        </span>
      </button>
    </div>
    <mdc-tooltip
      append-to=""
      class="tooltip"
      color="contrast"
      delay="0, 0"
      disable-aria-expanded=""
      flip=""
      hide-on-blur=""
      hide-on-escape=""
      id="mdc-tooltip-test"
      offset="4"
      placement="bottom"
      role="tooltip"
      style="z-index: 1000;"
      tooltip-type="description"
      trigger="mouseenter focusin"
      triggerid="user-state-tooltip"
      z-index="1000"
    >
      <mdc-text
        class="md-text-wrapper tooltip-text"
        tagname="small"
        type="body-large-regular"
      >
        You are currently engaged in an interaction and in the Available state.
      </mdc-text>
    </mdc-tooltip>
    <mdc-icon
      class="select-arrow-icon"
      data-testid="select-arrow-icon"
      name="arrow-down-bold"
      title=""
    />
  </div>
</div>
`;

exports[`UserState Component Snapshot Rendering renders correctly with idle state 1`] = `
<div>
  <div
    class="user-state-container"
    data-testid="user-state-container"
  >
    <div
      aria-describedby="mdc-tooltip-test"
      class="state-select idle md-select-wrapper"
      id="user-state-tooltip"
      style="--local-width: 100%;"
    >
      <div
        aria-hidden="true"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          <select
            size="3"
            tabindex="-1"
          >
            <option />
            <option
              value="0"
            >
              Available
            </option>
            <option
              value="1"
            >
              Break
            </option>
            <option
              value="2"
            >
              Meeting
            </option>
          </select>
        </label>
      </div>
      <button
        aria-controls="user-state-tooltip"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="user-state"
        aria-labelledby="user-state-tooltip react-aria-:rn:"
        class="md-select-dropdown-input md-select-selected"
        data-testid="state-select"
        id="user-state-tooltip"
        role="combobox"
        type="button"
      >
        <span
          class="md-select-selected-item-wrapper"
          id="react-aria-:rn:"
          title="Break"
        >
          <div
            class="item-container"
            data-testid="item-container selected idle"
          >
            <mdc-icon
              class="state-icon idle"
              data-testid="state-icon"
              name="recents-presence-filled"
              title=""
            />
            <mdc-text
              class="md-text-wrapper state-name idle"
              data-testid="state-name"
              tagname="small"
              type="body-large-regular"
            >
              Break
            </mdc-text>
          </div>
        </span>
        <span
          aria-hidden="true"
          class="md-select-icon-wrapper"
        >
          <div
            class="md-icon-wrapper"
          >
            <div
              class="md-icon-not-found"
              data-autoscale="false"
              data-scale="16"
            >
              ⃞
            </div>
          </div>
        </span>
      </button>
    </div>
    <mdc-tooltip
      append-to=""
      class="tooltip"
      color="contrast"
      delay="0, 0"
      disable-aria-expanded=""
      flip=""
      hide-on-blur=""
      hide-on-escape=""
      id="mdc-tooltip-test"
      offset="4"
      placement="bottom"
      role="tooltip"
      style="z-index: 1000;"
      tooltip-type="description"
      trigger="mouseenter focusin"
      triggerid="user-state-tooltip"
      z-index="1000"
    >
      <mdc-text
        class="md-text-wrapper tooltip-text"
        tagname="small"
        type="body-large-regular"
      >
        Availability State
      </mdc-text>
    </mdc-tooltip>
    <span
      class="elapsedTime "
      data-testid="elapsed-time"
    >
      03:00 / 
      05:00
    </span>
    <mdc-icon
      class="select-arrow-icon"
      data-testid="select-arrow-icon"
      name="arrow-down-bold"
      title=""
    />
  </div>
</div>
`;

exports[`UserState Component Snapshot State Changes renders correctly when changing from available to RONA 1`] = `
<div>
  <div
    class="user-state-container"
    data-testid="user-state-container"
  >
    <div
      aria-describedby="mdc-tooltip-test"
      class="state-select rona md-select-wrapper"
      id="user-state-tooltip"
      style="--local-width: 100%;"
    >
      <div
        aria-hidden="true"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          <select
            size="4"
            tabindex="-1"
          >
            <option />
            <option
              value="0"
            >
              Available
            </option>
            <option
              value="1"
            >
              Break
            </option>
            <option
              value="2"
            >
              Meeting
            </option>
            <option
              value="hide-3"
            >
              RONA
            </option>
          </select>
        </label>
      </div>
      <button
        aria-controls="user-state-tooltip"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="user-state"
        aria-labelledby="user-state-tooltip react-aria-:r1l:"
        class="md-select-dropdown-input md-select-selected"
        data-testid="state-select"
        id="user-state-tooltip"
        role="combobox"
        type="button"
      >
        <span
          class="md-select-selected-item-wrapper"
          id="react-aria-:r1l:"
          title="RONA"
        >
          <div
            class="item-container"
            data-testid="item-container "
          >
            <mdc-icon
              class="state-icon rona"
              data-testid="state-icon"
              name="dnd-presence-filled"
              title=""
            />
            <mdc-text
              class="md-text-wrapper state-name rona"
              data-testid="state-name"
              tagname="small"
              type="body-large-regular"
            >
              RONA
            </mdc-text>
          </div>
        </span>
        <span
          aria-hidden="true"
          class="md-select-icon-wrapper"
        >
          <div
            class="md-icon-wrapper"
          >
            <div
              class="md-icon-not-found"
              data-autoscale="false"
              data-scale="16"
            >
              ⃞
            </div>
          </div>
        </span>
      </button>
    </div>
    <mdc-tooltip
      append-to=""
      class="tooltip"
      color="contrast"
      delay="0, 0"
      disable-aria-expanded=""
      flip=""
      hide-on-blur=""
      hide-on-escape=""
      id="mdc-tooltip-test"
      offset="4"
      placement="bottom"
      role="tooltip"
      style="z-index: 1000;"
      tooltip-type="description"
      trigger="mouseenter focusin"
      triggerid="user-state-tooltip"
      z-index="1000"
    >
      <mdc-text
        class="md-text-wrapper tooltip-text"
        tagname="small"
        type="body-large-regular"
      >
        Availability State
      </mdc-text>
    </mdc-tooltip>
    <span
      class="elapsedTime "
      data-testid="elapsed-time"
    >
      03:00 / 
      05:00
    </span>
    <mdc-icon
      class="select-arrow-icon"
      data-testid="select-arrow-icon"
      name="arrow-down-bold"
      title=""
    />
  </div>
</div>
`;

exports[`UserState Component Snapshot State Changes renders correctly when changing from available to idle 1`] = `
<div>
  <div
    class="user-state-container"
    data-testid="user-state-container"
  >
    <div
      aria-describedby="mdc-tooltip-test"
      class="state-select idle md-select-wrapper"
      id="user-state-tooltip"
      style="--local-width: 100%;"
    >
      <div
        aria-hidden="true"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          <select
            size="3"
            tabindex="-1"
          >
            <option />
            <option
              value="0"
            >
              Available
            </option>
            <option
              value="1"
            >
              Break
            </option>
            <option
              value="2"
            >
              Meeting
            </option>
          </select>
        </label>
      </div>
      <button
        aria-controls="user-state-tooltip"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="user-state"
        aria-labelledby="user-state-tooltip react-aria-:r1f:"
        class="md-select-dropdown-input md-select-selected"
        data-testid="state-select"
        id="user-state-tooltip"
        role="combobox"
        type="button"
      >
        <span
          class="md-select-selected-item-wrapper"
          id="react-aria-:r1f:"
          title="Break"
        >
          <div
            class="item-container"
            data-testid="item-container selected idle"
          >
            <mdc-icon
              class="state-icon idle"
              data-testid="state-icon"
              name="recents-presence-filled"
              title=""
            />
            <mdc-text
              class="md-text-wrapper state-name idle"
              data-testid="state-name"
              tagname="small"
              type="body-large-regular"
            >
              Break
            </mdc-text>
          </div>
        </span>
        <span
          aria-hidden="true"
          class="md-select-icon-wrapper"
        >
          <div
            class="md-icon-wrapper"
          >
            <div
              class="md-icon-not-found"
              data-autoscale="false"
              data-scale="16"
            >
              ⃞
            </div>
          </div>
        </span>
      </button>
    </div>
    <mdc-tooltip
      append-to=""
      class="tooltip"
      color="contrast"
      delay="0, 0"
      disable-aria-expanded=""
      flip=""
      hide-on-blur=""
      hide-on-escape=""
      id="mdc-tooltip-test"
      offset="4"
      placement="bottom"
      role="tooltip"
      style="z-index: 1000;"
      tooltip-type="description"
      trigger="mouseenter focusin"
      triggerid="user-state-tooltip"
      z-index="1000"
    >
      <mdc-text
        class="md-text-wrapper tooltip-text"
        tagname="small"
        type="body-large-regular"
      >
        Availability State
      </mdc-text>
    </mdc-tooltip>
    <span
      class="elapsedTime "
      data-testid="elapsed-time"
    >
      03:00 / 
      05:00
    </span>
    <mdc-icon
      class="select-arrow-icon"
      data-testid="select-arrow-icon"
      name="arrow-down-bold"
      title=""
    />
  </div>
</div>
`;

exports[`UserState Component Snapshot State Changes renders correctly when changing to custom state 1`] = `
<div>
  <div
    class="user-state-container"
    data-testid="user-state-container"
  >
    <div
      aria-describedby="mdc-tooltip-test"
      class="state-select custom md-select-wrapper"
      id="user-state-tooltip"
      style="--local-width: 100%;"
    >
      <div
        aria-hidden="true"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          <select
            size="4"
            tabindex="-1"
          >
            <option />
            <option
              value="0"
            >
              Available
            </option>
            <option
              value="1"
            >
              Break
            </option>
            <option
              value="hide-ENGAGED"
            >
              Custom State
            </option>
            <option
              value="2"
            >
              Meeting
            </option>
          </select>
        </label>
      </div>
      <button
        aria-controls="user-state-tooltip"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="user-state"
        aria-labelledby="user-state-tooltip react-aria-:r1r:"
        class="md-select-dropdown-input md-select-selected"
        data-testid="state-select"
        id="user-state-tooltip"
        role="combobox"
        type="button"
      >
        <span
          class="md-select-selected-item-wrapper"
          id="react-aria-:r1r:"
          title="Custom State"
        >
          <div
            class="item-container"
            data-testid="item-container "
          >
            <mdc-icon
              class="state-icon custom"
              data-testid="state-icon"
              name="busy-presence-light"
              title=""
            />
            <mdc-text
              class="md-text-wrapper state-name custom"
              data-testid="state-name"
              tagname="small"
              type="body-large-regular"
            >
              Custom State
            </mdc-text>
          </div>
        </span>
        <span
          aria-hidden="true"
          class="md-select-icon-wrapper"
        >
          <div
            class="md-icon-wrapper"
          >
            <div
              class="md-icon-not-found"
              data-autoscale="false"
              data-scale="16"
            >
              ⃞
            </div>
          </div>
        </span>
      </button>
    </div>
    <mdc-tooltip
      append-to=""
      class="tooltip"
      color="contrast"
      delay="0, 0"
      disable-aria-expanded=""
      flip=""
      hide-on-blur=""
      hide-on-escape=""
      id="mdc-tooltip-test"
      offset="4"
      placement="bottom"
      role="tooltip"
      style="z-index: 1000;"
      tooltip-type="description"
      trigger="mouseenter focusin"
      triggerid="user-state-tooltip"
      z-index="1000"
    >
      <mdc-text
        class="md-text-wrapper tooltip-text"
        tagname="small"
        type="body-large-regular"
      >
        You are currently engaged in an interaction and in the Available state.
      </mdc-text>
    </mdc-tooltip>
    <mdc-icon
      class="select-arrow-icon"
      data-testid="select-arrow-icon"
      name="arrow-down-bold"
      title=""
    />
  </div>
</div>
`;
